added image elements to style.css for test

--- a/style.css
+++ b/style.css
@@ -1,5 +1,12 @@
+@font-face {
+	font-family: Oswald;
+	src: url('https://fonts.googleapis.com/css?family=Oswald');
+}
 body {
-	background: #3399ff;
+	margin: 0 auto;
+	background-image: url("http://i.imgur.com/zxmSRGc.jpg");
+	background-repeat: no-repeat;
+	background-size: 100%;
 }
 #frm{
 	border: solid gray 1px;
