--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 body {
 	max-width: 100%;
-	height: auto;
+	height: 100%;
 	width: auto\9;
 	background-image: url("http://i.imgur.com/zxmSRGc.jpg");
 	background-size: cover;
