--- a/style.css
+++ b/style.css
@@ -4,11 +4,11 @@
 }
 body {
 	max-width: 100%;
-	height: 150%;
+	height: auto;
 	width: auto\9;
 	background-image: url("http://i.imgur.com/zxmSRGc.jpg");
 	background-size: cover;
-	background-position: center;
+	background-position: ;
 	background-repeat: no-repeat;
 }
 #frm{
