--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
 	width: auto\9;
 	background-image: url("http://i.imgur.com/zxmSRGc.jpg");
 	background-size: cover;
-	background-position: ;
+	background-position: center bottom;
 	background-repeat: no-repeat;
 }
 #frm{
