--- a/new_style.css
+++ b/new_style.css
@@ -14,19 +14,19 @@ body{
 }
       
 .container{
-	border-radius:5px;
+    border-radius:5px;
     width:350px;
-    height: 300px;
+    height: auto;
     text-align: center;
     background-color: rgba(255,255,255,0.45);
     margin: 0 auto;
     margin-top: 50px;
 }
-      
+
 input[type="text"], input[type="password"]{
     border-color:rgba(0,0,0,.3);
     border-radius:5px;
-    height: 35px;
+    height: 30px;
     width:220px;
     font-size: 16px;
     margin-top:25px;
