--- a/new_style.css
+++ b/new_style.css
@@ -75,19 +75,19 @@ a:hover {
 }
     
 ::-webkit-input-placeholder { /* WebKit, Blink, Edge */
-	color:white;
+	color: rgb(38,159,220);
 }
 
 :-moz-placeholder { /* Mozilla Firefox 4 to 18 */
-	color:white;
+	color: rgb(38,159,220);
 	opacity:  1;
 }
 		
 ::-moz-placeholder { /* Mozilla Firefox 19+ */
-	color:white;
+	color: rgb(38,159,220);
 	opacity:  1;
 }
 
 :-ms-input-placeholder { /* Internet Explorer 10-11 */
-	color:white;
+	color: rgb(38,159,220);
 }
